[project]
name = "ventii"
version = "0.1.0"
description = "event flyer processing tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "pydantic>=2.11.5",
    "openai>=1.83.0",
    "pillow>=11.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
